[gd_scene load_steps=2 format=3 uid="uid://cf8vygf501tkg"]

[ext_resource type="Script" path="res://Units/Components/movement_component.gd" id="1_n1tsf"]

[node name="MovementComponent" type="Node2D"]
script = ExtResource("1_n1tsf")
speed = 50.0
unit_allegience = 2
unit_target_faction = 2
unit_targeting = 0

[node name="CheckTargetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="CheckTargetTimer" to="." method="_on_timer_timeout"]
